objects/FieloEE__SiteGallery__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FieloEE__BackgroundAttribute__c</fullName>
        <label>Background attribute</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__BackgroundId__c</fullName>
        <label>BackgroundId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__BodyBackgroundAttribute__c</fullName>
        <label>Body Background attribute</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__BodyBackgroundId__c</fullName>
        <label>Body Background Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__CSS__c</fullName>
        <label>CSS File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Catalog__c</fullName>
        <label>Catalog</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Color01__c</fullName>
        <label>Color01</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Color02__c</fullName>
        <label>Color02</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Color03__c</fullName>
        <label>Color03</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ColorFont01__c</fullName>
        <label>ColorFont01</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ColorFont02__c</fullName>
        <label>ColorFont02</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ColorFont03__c</fullName>
        <label>ColorFont03</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Font__c</fullName>
        <label>Font</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__FooterBackgroundAttribute__c</fullName>
        <label>Footer Background attribute</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__FooterBackgroundId__c</fullName>
        <label>Footer Background Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Footer__c</fullName>
        <label>Footer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__HeaderBackgroundAttribute__c</fullName>
        <label>Header Background attribute</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Header__c</fullName>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Menu__c</fullName>
        <label>Menu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__headerBackgroundId__c</fullName>
        <label>headerBackgroundId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Site Gallery</label>
</CustomObject>